8234509: Race in macOS os::processor_id()

Reviewed-by: dholmes, pliden, rehn